--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Bead</string>
+    <string name="app_name">CycleBeads</string>
+    <string name="welcome">
+
+        The CyycleBeads app will help you track your cycle.
+
+        You can use it to prevent pregnancy. It\'s based on a scientific proven, family planning method that is +95%
+         effective.
+
+        Lets get started.
+    </string>
 </resources>
